--- a/thorsten.css
+++ b/thorsten.css
@@ -1,41 +1,40 @@
+/* ====== CSS-Changes Thorsten ====== */
 
-/* ------ CSS-Changes Thorsten ------ */
-
+/* ------ NEWS-MODULE ------ */
+/* --- content: right arrangement of Tags --- */
 .content .field-item {
 	clear: both;
 }
 
-.upload_attachments.last > a {
+/* --- links (alternating): right font size, divider --- */
+.links .upload_attachments.last > a {
 	font-size: 10px;
 }
 
-.upload_attachments.last >a:before {
+.links .upload_attachments.last >a:before {
 	content: " | ";
 }
 
+.links .comment_add.first > a {
+	font-size: 10px;
+}
+
+.links .comment_add.first  >a:after {
+	content: " | ";
+}
+
+.links .comment_comments.first > a {
+	font-size: 10px;
+}
+
+.links .comment_comments.first  >a:after {
+	content: " | ";
+}
+
+/* ------ Hide of Breadcrumb-Divider (top left after Logo) ------ */
 #global .breadcrumb .divider,
 #global .breadcrumb .link-1,
 #global .breadcrumb .link-2 {
-	visibility: hidden;
-	}
-
-  
-  
-  
-  /*  ----- changes Philipp ---- */
-  
- .comment_add.first > a {
-    font-size: 10px;
+        visibility: hidden;
 }
 
-.comment_add.first  >a:after {
-	content: " | ";
-}
-
- .comment_comments.first > a {
-    font-size: 10px;
-}
-
-.comment_comments.first  >a:after {
-	content: " | ";
-}
