--- a/update.css
+++ b/update.css
@@ -351,6 +351,8 @@ body.node-type-blog .node.sticky, body.node-type-event .node.sticky  { border: 0
 input, select { padding: 2px; border: none !important; }
 input[type=text],input[type=password], select { border: #404040 1px solid !important;  }
 input[type=submit] { padding: 2px 4px; }
+#field-projectemail-items .form-item { width: 400px;}
+#field-projectemail-items .form-item input { width: 400px;}
 .view-frontpage-hack .view-filters input { width: 129px; }
 legend { font-size: 14px; font-weight: bold; }
 label.over-apply { position: relative !important; padding: 5px 0 4px 0; color: #404040; }
