--- a/thorsten.css
+++ b/thorsten.css
@@ -12,7 +12,7 @@
 }
 
 .links .upload_attachments.last >a:before {
-	content: " | ";
+	content: "&nbsp;|&nbsp;";
 }
 
 .links .comment_add.first > a {
@@ -20,7 +20,7 @@
 }
 
 .links .comment_add.first  >a:after {
-	content: " |";
+	content: "&nbsp;|";
 }
 
 .links .comment_comments.first > a {
@@ -28,7 +28,7 @@
 }
 
 .links .comment_comments.first  >a:after {
-	content: " |";
+	content: "&nbsp;|";
 }
 
 /* ------ Hide of Breadcrumb-Divider (top left after Logo) ------ */
