--- a/thorsten.css
+++ b/thorsten.css
@@ -13,9 +13,11 @@
 .node .field-items a,
 .node .terms .links a { font-size: 12px; }
 .node .links a { font-size: 10px; }
+.node .links .inline { font-size: 10px; }
 
 /* ----- blog entries: divider between link-Elements ----- */
 .node .links .upload_attachments.last > a:before { content: " | "; }
+.node .links .upload_attachments.first > a:after { content: " | "; }
 .node .links .comment_add.first  > a:after { content: " |"; }
 .node .links .comment_new_comments.first  > a:after { content: " |"; }
 .node .links .comment_comments.first  > a:after { content: " |"; }
