--- a/update.css
+++ b/update.css
@@ -426,9 +426,9 @@ div.content ul.links {
   font-size: 13.2px;
 }
 
-
-
-
+div.content fieldset.group-beteiligteinstitutionen a.noderelationships-nodereference-multi-button {
+  display: none;
+}
 
 /* loescht redundante titel und beschreibungsinformationen im project info*/
 .view-info-listing .view-content h2.node-title {
