--- a/custom.css
+++ b/custom.css
@@ -2168,7 +2168,7 @@ div.pager .minipager .clear-block {
 .atrium-folders-navigator div.buttons { padding: 0; }
 
 .dropzone.dropzone-upload #attachments { width: 100%; position:relative; }
-#node-form .form-item #edit-upload-wrapper {padding-left: 30px;}
+#node-form  #edit-upload-wrapper .form-item {padding-left: 30px;}
 
 
 /* Twitter Form Field */
