revising bad code in template.php causing book pages to break

--- a/custom.css
+++ b/custom.css
@@ -2134,7 +2134,7 @@ fieldset.group-beteiligteinstitutionen table.sticky-header {
 }
 
 div.litecal .litecal-data .views-field.title { 
-  color:#404040; /*old 48A */ 
+ /* color:#404040; old 48A */ 
 }
 
 div.litecal .litecal-title { 
