--- a/custom.css
+++ b/custom.css
@@ -2163,12 +2163,14 @@ div.pager .minipager .clear-block {
 /* OA Folders features */
 .atrium-folders-navigator .left { width: 28%; }
 .atrium-folders-navigator .toolbar a { color: #fff !important; margin-left: 0;}
+.atrium-folders-navigator .toolbar a:hover { color: #fff !important; margin-left: 0;}
 .atrium-folders-navigator ul.links  { width: 100% !important; margin: 0 0 10px 0; padding: 0;}
 .atrium-folders-navigator ul.links li { margin-left: 0 !important; }
 .atrium-folders-navigator div.buttons { padding: 0; }
 
 .dropzone.dropzone-upload #attachments { width: 100%; position:relative; }
 #node-form  #edit-upload-wrapper {padding-left: 30px !important;}
+.view-folders-navigation .views-row.active a.active:hover { color: #fff !important; }
 
 
 /* Twitter Form Field */
