--- a/thorsten.css
+++ b/thorsten.css
@@ -153,7 +153,7 @@ div.content .field-field-ref-valuepartner {
 }
 
 /* ----------------- eliminated dots within book-module ------ */
-.block .prose ul li {
+.block .prose #expanded-book ul li {
   margin: 0px 0px 0px 10px;
   list-style: none;
 }
