--- a/thorsten.css
+++ b/thorsten.css
@@ -179,6 +179,6 @@ div.content .field-type-content-taxonomy ul {
   display: table;
 }
 
-div.conent ul.links {
+.node div.content ul.links {
 	display: table-row-group;
 }
