--- a/thorsten.css
+++ b/thorsten.css
@@ -180,5 +180,5 @@ div.content .field-type-content-taxonomy ul {
 }
 
 .node div.content ul.links {
-	display: table-row-group;
+	display: table-row-group !important;
 }
