--- a/thorsten.css
+++ b/thorsten.css
@@ -242,6 +242,22 @@ div.content div.field-field-eventteaser {
 }
 
 div.content .view-flag-termin-teilnahme .view-footer {
-margin: 10px 0 0 160px;
+  margin: 10px 0 0 160px;
+}
+
+div.content a.flag-link-normal {
+  margin: 10px 0 0 170px;
+  font-size: 11px;
+  font-weight: bold;
+  color: #fff;
+  background: #666 url(images/sprite_bleeds.png) 0px -400px repeat-x;
+  text-shadow: #444 0px 1px 0px;
+  border: 1px solid #555;
+  border-color: #555 #555 #333;
+  margin-left: 5px;
+  padding: 4px 9px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  width: auto;
 }
 
